# ns3sionna

./: README.md  ubuntu-ns3sionna.def
common/: message.proto
examples/: example-sionna-sensing-mobile.cc  plot3d_mobile_csi.py
helper/: sionna-helper.cc
model/: message.proto  sionna-mobility-model.cc  sionna-mobility-model.h
model/ns3sionna/: ns3sionna_server.py  requirements_cpuonly.txt  run_fast.sh
ns3-sionna/: CMakeLists.txt  example-mobility-sionna.cc  example-mobility-sionna.sh  example-munich-mobility-sionna.cc  example-optimized-sionna.cc  example-sionna-sensing-mobile.cc  example-sionna-sensing-mobile.sh  example-sionna-sensing.cc  example-sionna-sensing.sh  example-sionna-snr.cc  example-sionna-spectrummodel.cc  example-sionna.cc  performance-ns3.cc  performance-sionna.cc  plot3d_mobile_csi.py  plot_csi.py  plot_snr.py
ns3-sionna/lib/: cfr-tag.cc  cfr-tag.h  sionna-helper.cc  sionna-helper.h  sionna-mobility-model.cc  sionna-mobility-model.h  sionna-phased-array-spectrum-propagation-loss-model.cc  sionna-phased-array-spectrum-propagation-loss-model.h  sionna-propagation-cache.cc  sionna-propagation-cache.h  sionna-propagation-delay-model.cc  sionna-propagation-delay-model.h  sionna-propagation-loss-model.h  sionna-spectrum-propagation-loss-model.cc  sionna-spectrum-propagation-loss-model.h  sionna-utils.h
sionna_server/: sionna_server.py  sionna_utils.py  test_imports.py
